# parseotter

./: .cloudflare-dispatch-secrets.env.example  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  ROADMAP.md  SECURITY.md
modal-converter/: README.md  cli_entrypoints.py  marker_inference.py  modal_app.py  model_loader.py  pyproject.toml  pytest.ini
modal-converter/api_gateway/: INTEGRATION.md  __init__.py  cloudflare_dispatch.py  config.py  enqueuer.py  handlers.py  id_utils.py  id_validation.py  status_writer.py  storage.py  validator.py
modal-converter/api_gateway/dispatch/: __init__.py  callback.py  processor.py  r2_client.py  validation.py
modal-converter/api_gateway/tests/: test_cloudflare_dispatch.py  test_config.py  test_dispatch_public_contracts.py  test_enqueuer.py  test_handlers_routes.py  test_id_utils.py  test_id_validation.py  test_modal_deployment_config.py  test_r2_client.py  (+3 more)
modal-converter/orchestrator/: __init__.py  cache.py  lock.py  pipeline.py  retry.py  status.py
modal-converter/shared/: __init__.py  atomic_write.py  config.py  constants.py  context.py  env.py  error_codes.py  hashing.py
modal-converter/tests/: test_cli_entrypoints.py  test_marker_inference.py  test_marker_inference_inputs.py  test_model_loader.py  test_orchestrator.py  test_orchestrator_cache.py  test_orchestrator_e2e.py  test_orchestrator_lock.py  test_orchestrator_retry.py  test_orchestrator_status.py  test_public_contracts.py  test_shared_config.py  test_shared_context.py  test_shared_utils.py
(+210 files in other folders)
