[project]
name = "parseotter-modal-converter"
version = "0.1.0"
description = "Modal GPU converter for the ParseOtter PDF/EPUB-to-Markdown service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "marker-pdf[full]>=1.10.1",
    "modal>=1.2.4",
    "python-multipart>=0.0.20",
    "requests>=2.31.0",
    "torch>=2.2.2,<3.0.0",
    "torchvision>=0.17.0",
    "uvicorn>=0.30.0",
    "weasyprint>=63.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
